Updated CSS to fix alignment issues.

--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,14 @@ main {
 }
 
 h1{
+  margin-left: 4%;
   color: #ffffff;
   padding: 15px;
 }
 
 h2 {
-  margin-right: 20px;
-  color: #444444;
+  margin-left: 5%;
+  color: white;
 }
 .hero-banner {
   background-image: url('https://as2.ftcdn.net/v2/jpg/05/06/47/83/1000_F_506478399_l0jgZ5ZWj80o8XYdEJtYfQhVYMU56qDJ.jpg');
@@ -43,7 +44,7 @@ h2 {
   width: 100%;
     height: 300px;
     display: flex;
-      justify-content: flex-end;
+      justify-content: flex-start;
       align-items: flex-start;
       flex-wrap: wrap;
 }
@@ -83,6 +84,7 @@ h6 {
 
 p {
   margin: 0;
+  color: white;
 }
 
 .page-section {
